PT #163860252: Fix broken hover links for CF apps